fix(chat): improve RTL send icon alignment

--- a/packages/default/scss/chat/_layout.scss
+++ b/packages/default/scss/chat/_layout.scss
@@ -278,6 +278,11 @@ $message-group-spacing: calc( #{$chat-avatar-size} + #{$chat-avatar-spacing} );
             &::after {
                 display: none;
             }
+
+            .k-rtl &,
+            &[dir="rtl"] {
+                transform: rotate(180deg);
+            }
         }
     }
 
